python-graph
A library for working with graphs in Python
--------------------------------------------------------------------------------

CHANGELOG


Release 1.6.0	[??? ??, 2009]

Important API Changes:
	get_edge_weight was renamed to edge_weight;
	get_edge_label was renamed to edge_label;
	get_edge_attributes was renamed to edge_attributes;
	get_node_attributes was renamed to node_attributes.

Release 1.5.0	[May 03, 2009]

Enhancements:
	* Assymptotically faster Mutual Accessibility (now using Tarjan's algorithm);
	* DOT-Language importing;
	* Transitive edge detection;
	* Critical path algorithm.

Fixes:
	* Cycle detection algorithm was reporting wrong results on some digraphs;
	* Removed Minimal Spanning Tree from Digraphs as Prim's algorithm does not work on them (Issue 28).
	* Deletion of A--A edge raised an exception;
	* Deletion of an node with an A--A edge raised an exception.

Important API Changes:
	* Removed minimal_spanning_tree() method from the digraph class.


Release 1.4.2	[Feb 22, 2009]

Fixes:
	find_cycle() trapped itself in infinite recursion in some digraphs (Issue 22).


Release 1.4.1	[Feb 09, 2009]

Fixes:
	graph.algorithms.filters was not being installed (Issue 20).


Release 1.4.0	[Feb 07, 2009]

Enhancements:
	Added A* search algorithm (as heuristic_search);
	Added Chow's and Euclidean heuristics for A*;
	Added filtered depth-first and breadth-first search;
	Added 'find' search filter (stops the search after reaching a target node);
	Added 'radius' search filter (radial limit for searching); 
	Moved to setuptools.

Fixes:
	Breadth first search was omitting the first node in level ordering when no root was specified.


Release 1.3.1	[Oct 27, 2008]

Fixes:
	Graph and digraph inverse was not working;
	Node removal in digraphs was not deleting all relevant edges (Issue 13).

Important API Changes:
	Deprecated methods were removed.


Release 1.3.0	[Sep 28, 2008]

Enhancements:
	Tree traversals (preorder and postorder).

Fixes: